---------------------------------------------------------------------------------------
Scheduled Release 8.2602.0 (aka 2026.02) 2026-12-??
- overall improved documentation via a large set of topic updates.

- 2026-01-25: Add support healthchecktimedelay into omhttp
  This PR add the possibility to set up a time to delay the check
  of an "API health URL" to avoid multi request to an API.
  In some case, when you use the omhttp module to send massive
  volume of data to an API, the check of the API status does not
  need to be done at each post request. This parameter allow to
  set up a delay between two check of the API health URL.
  Thanks to github user shinigami35 for the patch.
- 2026-01-24: AI: added improved AI agent skills
  Added skills, so that AI agents will hopefully follow instructions and
  rsyslog workflow better. Adapted AGENTS.md to support them. First results
  look very promising, so merged to main branch.
- 2026-01-24: testbench: refactor Makefile.am; factor test lists, fix dist
  Reduce Makefile clutter and make the test harness easier to reason
  about for humans and machines. This also aims to lower CI flakes by
  making the dist artifact complete and predictable.
  Impact: build/test harness only; no runtime change. New
  TEST_RUN_TYPE=MOCK-OK opt-in fast path in diag.sh.
  Before: many scattered conditional TESTS entries; some scripts were
  only in EXTRA_DIST when corresponding features were enabled, leading
  to missing files in "make dist*" tarballs. Duplicates existed.
  After: conditional test lists are grouped into variables (e.g.,
  TESTS_ELASTICSEARCH_MINIMAL) and appended to TESTS under the same
  conditionals; all lists are always added to EXTRA_DIST. Duplicate
  entries removed. diag.sh recognizes TEST_RUN_TYPE=MOCK-OK for mock
  distchecks and exits success without executing.
- 2026-01-24: imfile: add inotify fallback rescans on watch limits
  Graceful degradation when watch limits are reached avoids a hard stop